Fix layout issue

--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -112,11 +112,6 @@ $two-column-gutter: 60px;
   margin-right: 60px;
 }
 
-.two-column #main-panel {
-  margin-left: $sidebar-width + 40px;
-  margin-right: 60px;
-}
-
 #drawer-buttons {
   position: fixed;
   top: 48px;
